# Satellite

./: CMakeLists.txt  InitialConditions300.csv  README.md  comparisonPlots.py  finalInitialConditions.csv  initialConditions.csv  intialConditions.csv  main.cpp  makeIntialConditions.py  makePlots  matplotlibcpp.h  monteCarlo.cpp  parallelize.cpp  product_sales.csv  readMCResults.py  readResults.py  readTiming.py  useCodeGen.cpp
Results/Euler/ts10/: maxIter10.csv  maxIter3.csv  maxIter4.csv  maxIter5.csv
Results/Euler/ts10/maxIter10/: trial0.csv  trial1.csv  trial10.csv  trial100.csv  trial101.csv  trial102.csv  trial103.csv  trial104.csv  trial105.csv  trial106.csv  trial107.csv  trial108.csv  trial109.csv  trial11.csv  trial110.csv  trial111.csv  trial112.csv  trial113.csv  trial114.csv  trial115.csv  trial116.csv  trial117.csv  trial118.csv  trial119.csv  trial12.csv  trial120.csv  trial121.csv  trial122.csv  trial123.csv  trial124.csv  trial125.csv  trial126.csv  trial127.csv  trial128.csv  trial129.csv  trial13.csv  trial130.csv  trial131.csv  trial132.csv  trial133.csv  (+160 more)
Results/Euler/ts10/maxIter100/: trial0.csv  trial1.csv  trial10.csv  trial100.csv  trial101.csv  trial102.csv  trial103.csv  trial104.csv  trial105.csv  trial106.csv  trial107.csv  trial108.csv  trial109.csv  trial11.csv  trial110.csv  trial111.csv  trial112.csv  trial113.csv  trial114.csv  trial115.csv  trial116.csv  trial117.csv  trial118.csv  trial119.csv  trial12.csv  trial120.csv  trial121.csv  trial122.csv  trial123.csv  trial124.csv  trial125.csv  trial126.csv  trial127.csv  trial128.csv  trial129.csv  trial13.csv  trial130.csv  trial131.csv  trial132.csv  trial133.csv  (+160 more)
Results/Euler/ts10/maxIter1000/: trial0.csv  trial1.csv  trial10.csv  trial100.csv  trial101.csv  trial102.csv  trial103.csv  trial104.csv  trial105.csv  trial106.csv  trial107.csv  trial108.csv  trial109.csv  trial11.csv  trial110.csv  trial111.csv  trial112.csv  trial113.csv  trial114.csv  trial115.csv  trial116.csv  trial117.csv  trial118.csv  trial119.csv  trial12.csv  trial120.csv  trial121.csv  (+173 more)
Results/Euler/ts20/: maxIter10.csv  maxIter3.csv  maxIter4.csv  maxIter5.csv
Results/Euler/ts30/: maxIter3.csv  maxIter4.csv
Results/Euler/ts5/: maxIter10.csv  maxIter3.csv  maxIter4.csv  maxIter5.csv
Results/RK4/: maxIter1000.csv  maxIter3.csv  maxIter4.csv  maxIter5.csv
Timing/Euler/: maxIter1000.csv  maxIter10000.csv
Timing/RK4/: maxIter1000.csv  maxIter3.csv  maxIter4.csv  maxIter5.csv
TimingStats/Euler/: .~lock.maxIter4ts30.csv#
TimingStats/Euler/ts10/: maxIter10.csv  maxIter3.csv  maxIter4.csv  maxIter5.csv
TimingStats/Euler/ts20/: maxIter10.csv  maxIter3.csv  maxIter4.csv  maxIter5.csv
TimingStats/Euler/ts30/: maxIter100.csv  maxIter3.csv  maxIter4.csv  maxIter50.csv
TimingStats/Euler/ts5/: maxIter10.csv  maxIter3.csv  maxIter4.csv  maxIter5.csv
TimingStats/RK4/ts30/: maxIter100.csv
(+6601 files in other folders)
